# alx-backend-security

./: .gitignore  README.md
alx_backend_security/: main.py  pyproject.toml
alx_backend_security/alx_backend_security/: celery.py  settings.py  urls.py
alx_backend_security/ip_tracking/: admin.py  middleware.py  models.py  tasks.py  urls.py  views.py
alx_backend_security/ip_tracking/management/commands/: block_ip.py  clear_blocked_ips.py  clear_geo_cache.py  detect_anomalies.py  geo_analytics.py  list_blocked_ips.py  update_missing_geolocation.py
alx_backend_security/ip_tracking/migrations/: 0001_initial.py  0002_blockedip.py  0003_requestlog_city_requestlog_country.py
alx_backend_security/ip_tracking/templates/ip_tracking/: dashboard.html  login.html  public_stats.html  rate_limit_exceeded.html
